--- a/class/editor/css/e20r-email-editor-admin.css
+++ b/class/editor/css/e20r-email-editor-admin.css
@@ -15,3 +15,21 @@
   * You should have received a copy of the GNU General Public License
   * along with this program.  If not, see <http://www.gnu.org/licenses/>.
   */
+div#e20r-editor-configure-css {
+	min-height: 100px;
+	height: 100%;
+	max-height: 200px;
+}
+textarea#e20r-editor-custom-css-input {
+	line-height: 1em;
+	width: 100%;
+	height: 150px;
+}
+div#e20r-editor-configure-css label {
+	vertical-align: top;
+}
+#e20r-editor-custom-css {
+	width: 100%;
+	// line-height: 1.5em;
+	height: 90%;
+}
