--- a/templates/ccexpiring.html
+++ b/templates/ccexpiring.html
@@ -1,12 +1,14 @@
 
-The payment method you used to pay for your membership at !!sitename!! will expire soon.
+The payment method you used to pay for your membership at !!sitename!! may expire soon.
 Please log in and update your billing information to avoid account suspension: !!login_link!!
 
 Account: !!display_name!! (!!user_email!!)
+
 The most recent account information we have on file is:
 !!billing_name!!
 !!billing_address!!
 
-
 !!cardtype!!: !!accountnumber!!
 Recorded Expiration Date: !!expirationmonth!!/!!expirationyear!!
+
+NOTE: Credit Card information for recurring billing memberships is securely stored by our payment processor. It is not stored on our website. 
